# agent-plugins

./: .gitignore  CLAUDE.md  README.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.codex/: hooks.json
.codex/hooks/: ohos_post_tool_use.sh  ohos_pre_tool_use.sh
.github/workflows/: validate-plugins.yml
docs/superpowers/plans/: 2026-04-04-ohos-porting-codex-conversion.md  2026-04-04-openai-branch-repository-isolation.md  2026-04-05-codex-skills-root-normalization.md
docs/superpowers/specs/: 2026-04-04-ohos-porting-codex-conversion-design.md  2026-04-04-openai-branch-repository-isolation-design.md  2026-04-05-codex-skills-root-normalization-design.md  2026-04-08-openai-branch-plugins-realignment-design.md
plugins/auto-clean/: README.md
plugins/auto-clean/.claude-plugin/: plugin.json
plugins/auto-clean/commands/: clean-history.md  init.md
plugins/auto-clean/hooks/: hooks.json
plugins/auto-clean/scripts/: clean-history.sh  init.sh
plugins/codebase-frontmatter-summary/: AGENTS.md  CLAUDE.md  README.md
plugins/codebase-frontmatter-summary/.codex-plugin/: plugin.json
plugins/codebase-frontmatter-summary/docs/: agent-architecture.md  index-schemas.md
plugins/codebase-frontmatter-summary/tests/: test_repo_indexer.py
plugins/email-notify/: README.md  install.sh
plugins/ohos-porting/: README.md  install.sh
plugins/ohos-porting/skills/ohos-cpp-style/asserts/: .clang-format  BUILD.gn  template.h
plugins/project-structure/: README.md
plugins/skill-evolving-expert/: AGENT_SPEC.md  DOC_ORGANIZATION_GUIDE.md  KNOWLEDGE_RETRIEVAL_GUIDE.md  README.md  USAGE.md
plugins/translate-web-to-chinese/: AGENTS.md  README.md  scan-manifest.json
skills/ohos-cpp-style/: config.json  config.json.bak
skills/ohos-permission/: SKILL.md
skills/translate-web-to-chinese/: SKILL.md
(+256 files in other folders)
